WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54603
Back out IndexedDB change thats no longer necessary
https://bugs.webkit.org/show_bug.cgi?id=54603
Summary
Back out IndexedDB change thats no longer necessary
Jeremy Orlow
Reported
2011-02-16 18:17:51 PST
Back out IndexedDB change thats no longer necessary
Attachments
Patch
(13.62 KB, patch)
2011-02-16 18:19 PST
,
Jeremy Orlow
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Orlow
Comment 1
2011-02-16 18:19:39 PST
Created
attachment 82732
[details]
Patch
Jeremy Orlow
Comment 2
2011-02-16 18:20:44 PST
Committed
r78758
: <
http://trac.webkit.org/changeset/78758
>
Eric Seidel (no email)
Comment 3
2011-02-24 03:21:05 PST
Comment on
attachment 82732
[details]
Patch webkit-patch land should clear flags on patches when it lands them.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug