2011-02-16  Jeremy Orlow  <jorlow@chromium.org>

Back out IndexedDB change thats no longer necessary
        https://bugs.webkit.org/show_bug.cgi?id=54603

        Backing out 78645 as it turns out that it's not necessary.

        * storage/IDBFactoryBackendImpl.cpp:
        (WebCore::IDBFactoryBackendImpl::open):
        * storage/IDBFactoryBackendImpl.h:
        * storage/IDBFactoryBackendInterface.h:
2011-02-16  Jeremy Orlow  <jorlow@chromium.org>

        Back out IndexedDB change thats no longer necessary
        https://bugs.webkit.org/show_bug.cgi?id=54603

        Backing out 78645 as it turns out that it's not necessary.

        * public/WebIDBFactory.h:
        (WebKit::WebIDBFactory::open):
        * src/AssertMatchingEnums.cpp:
        * src/IDBFactoryBackendProxy.cpp:
        * src/IDBFactoryBackendProxy.h:
        * src/WebIDBFactoryImpl.cpp:
        (WebKit::WebIDBFactoryImpl::open):
        * src/WebIDBFactoryImpl.h:

Canonical link: https://commits.webkit.org/68734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78758 268f45cc-cd09-0410-ab3c-d52691b4dbfc